--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,6 +104,7 @@ jobs:
         # Эта команда устанавливает зависимости для фронтенда
         run: |
           cd frontend/
+          npm install
           npm ci
 
       - name: Test frontend
