--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,6 +105,7 @@ jobs:
         run: |
           cd frontend/
           npm install
+          npm ci
 
       - name: Test frontend
         # Запускаем тесты
