--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -27,6 +27,6 @@ services:
     image: 1oneome1/taski_gateway  # Качаем с DockerHub
     env_file: .env
     volumes:
-      - static_volume:/staticfiles/
+      - static_volume:/static/
     ports:
       - 8000:80
