--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,6 @@ services:
     build: ./nginx/
     env_file: .env
     volumes:
-      - static:/staticfiles
+      - static:/static
     ports:
       - 8000:80
