--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -189,7 +189,7 @@ jobs:
           script: |
             cd Taski
             # Очистка памяти
-            sudo docker system prune
+            sudo docker system prune --all --force
             npm cache clean
             sudo apt-get clean
             # Выполняет pull образов с DockerHub
@@ -201,3 +201,4 @@ jobs:
             sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
             sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
             sudo docker compose -f docker-compose.production.yml exec backend cp -r ./collected_static/. ../backend_static/static/
+            sudo docker system prune --all --force
