--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,5 +1,8 @@
 server {
   listen 80;
+  index index.html;
+  server_tokens off;
+  client_max_body_size 20M;
 
   location /api/ {
     proxy_set_header Host $http_host;
@@ -9,9 +12,8 @@ server {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/admin/;
   }
-
   location / {
     alias /static/;
-    index index.html;
+    try_files $uri $uri/ /index.html;
   }
 }
